# notes

./: .env.example  Cargo.toml  README.md  deno.jsonc  deps.ts  env.ts  import_map.json  mod.ts  scripts.yaml
src/: auth.rs  config.rs.example  main.rs  tls.rs  types.rs
src/v1/: mod.rs  note.rs
