[package]
name = "notes"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true

[profile.release]
lto = true
panic = "abort"
strip = true

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
serde = "1"
tokio = { version = "1", features = ["full"] }
rustls = "0.20"
rustls-pemfile = "0.3"

[dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "http", "model", "rustls_backend"]
version = "0.10"
